--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "olympics-2021-diving",
-  "version": "1.0.0-pre",
-  "description": "A project generated from aunty's svelte project template.",
-  "license": "MIT",
-  "private": true,
-  "contributors": [
-    "Colin Gourlay <gourlay.colin@abc.net.au>"
-  ],
-  "aunty": {
-    "type": "svelte"
-  },
-  "scripts": {
-    "start": "aunty serve",
-    "test": "aunty test"
-  },
-  "abc": {
-    "css": {
-      "libraryDir": "./node_modules/@abcaustralia/nucleus/css",
-      "logVariables": "false"
-    }
-  },
-  "devDependencies": {
-    "@abcnews/aunty": "^12.0.2",
-    "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^26.0.23",
-    "@types/webpack-env": "^1.16.0"
-  },
-  "dependencies": {
-    "@abcnews/alternating-case-to-object": "^3.0.2",
-    "@abcnews/env-utils": "^3.0.0",
-    "@abcnews/mount-utils": "^2.0.0",
-    "svelte": "^3.31.2",
-    "svelte-range-slider-pips": "^1.7.0"
-  }
+	"name": "olympics-2021-diving",
+	"version": "1.0.0",
+	"description": "A project generated from aunty's svelte project template.",
+	"license": "MIT",
+	"private": true,
+	"contributors": [
+		"Colin Gourlay <gourlay.colin@abc.net.au>"
+	],
+	"aunty": {
+		"type": "svelte"
+	},
+	"scripts": {
+		"start": "aunty serve",
+		"test": "aunty test"
+	},
+	"abc": {
+		"css": {
+			"libraryDir": "./node_modules/@abcaustralia/nucleus/css",
+			"logVariables": "false"
+		}
+	},
+	"devDependencies": {
+		"@abcnews/aunty": "^12.0.2",
+		"@testing-library/svelte": "^3.0.3",
+		"@types/jest": "^26.0.23",
+		"@types/webpack-env": "^1.16.0"
+	},
+	"dependencies": {
+		"@abcnews/alternating-case-to-object": "^3.0.2",
+		"@abcnews/env-utils": "^3.0.0",
+		"@abcnews/mount-utils": "^2.0.0",
+		"svelte": "^3.31.2",
+		"svelte-range-slider-pips": "^1.7.0"
+	}
 }
