Add lottie-driven Scrubby component. Add script to generate lottie config data from a directory of sequenced images.

--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
 		"@abcnews/aunty": "^12.0.2",
 		"@testing-library/svelte": "^3.0.3",
 		"@types/jest": "^26.0.23",
-		"@types/webpack-env": "^1.16.0"
+		"@types/webpack-env": "^1.16.0",
+		"calipers": "^2.0.1",
+		"calipers-jpeg": "^2.0.0",
+		"calipers-png": "^2.0.0",
+		"write-json-file": "^4.3.0"
 	},
 	"dependencies": {
 		"@abcnews/alternating-case-to-object": "^3.0.2",
 		"@abcnews/env-utils": "^3.0.0",
 		"@abcnews/mount-utils": "^2.0.0",
+		"lottie-web": "^5.7.11",
 		"svelte": "^3.31.2",
 		"svelte-range-slider-pips": "^1.7.0"
 	}
