Re-configure public assets so that a build for Apple News would be self-contained (baked-in ABC fonts, etc.). Add a script to build assets for Apple News (removing unused assets). Only show Test's continue reading text when not embedded.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"calipers-jpeg": "^2.0.0",
 		"calipers-png": "^2.0.0",
 		"calipers-svg": "^2.0.1",
-		"write-json-file": "^4.3.0"
+		"write-json-file": "^4.3.0",
+		"zip-a-folder": "^1.1.0"
 	},
 	"dependencies": {
 		"@abcnews/alternating-case-to-object": "^3.0.2",
